--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
 	<main class="appMain">
 		<div id="contLetras">
-			<p id="instrucciones">Entrena tu coordinación entre los Hemisferios Cerebrales <br>
-				Debes Decir en voz alta el color de las letras</p>
+			<p id="instrucciones">Decir en voz alta el color de las palabras</p>
 			<h1>--</h1>
 		</div>
 		<div class="btns">
@@ -21,7 +20,7 @@
 			<div id="speedContainer">
 				<label>Interval</label>
 				<br>
-				<input type="number" min="400" max="3000" placeholder="2000ms">
+				<input type="number" min="400" max="3000" placeholder="2000 ms">
 			</div>
 			<div class="stop"><img src="stop.png" alt="Stop"></div>
 		</div>
